# CMakeHelper

./: .gitignore  CMakeLists.txt
cmake/: _test.cmake  common.cmake  git.cmake  logic.cmake
test/: test_git.cmake  test_logic.cmake
